--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,4 +6,46 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <!-- <ion-badge color="primary">11</ion-badge> -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-title>Card Title</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Keep close to Nature's heart... and break clear away, once in awhile,
+      and climb a mountain or spend a week in the woods. Wash your spirit clean.
+    </ion-card-content>
+  </ion-card>
+  <ion-grid>
+      <ion-row>
+        <ion-col size="4">
+          <div>
+            1 of 4
+          </div>
+        </ion-col>
+        <ion-col size="2">
+          <div>
+            2 of 4
+          </div>
+        </ion-col>
+        <ion-col size="2">
+          <div>
+            3 of 4
+          </div>
+        </ion-col>
+        <ion-col size="4">
+          <div>
+            4 of 4
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  <ion-button expand="block" class="ion-activatable" (click)="presentActionSheet()">
+    Block Button
+    <ion-ripple-effect></ion-ripple-effect>
+  </ion-button>
+
+</ion-content>
